--- a/http-api/Dockerfile
+++ b/http-api/Dockerfile
@@ -10,7 +10,7 @@ COPY package*.json ./
 COPY tsconfig.json ./
 
 # Install dependencies
-RUN npm ci
+RUN npm install --production=false
 
 # Copy source code
 COPY src ./src
