add traefik for TLS termination

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
-# Domain Configuration
+# Domain Configuration (must be a real domain for Traefik/Let's Encrypt)
 DOMAIN=localhost
+
+# Let's Encrypt (required for Traefik TLS)
+ACME_EMAIL=
 
 # Retention Policy
 RETENTION_DAYS=30
