--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,9 @@ WEB_PORT=3000
 # Database
 DATABASE_URL=postgres://smtp:smtp@db:5432/smtp
 
+# Registration (set to false to disable public inbox creation from home page)
+REGISTRATION_ENABLED=true
+
 # Admin (optional - leave empty to disable admin panel)
 ADMIN_USERNAME=
 ADMIN_PASSWORD=
